--- a/css/sprite.forms.css
+++ b/css/sprite.forms.css
@@ -29,12 +29,13 @@
  * 1) General Styling
  * ================================================== */
  input, textarea {
+  font-size: 20px;
 	background: #fff;
 	display: block;
 	margin: 10px 0;
 	border: 1px solid #c8c8c8;
 	border-radius: 5px;
-	padding: 5px 0;
+	padding: 5px -10px 5px 8px;
 	width: 400px;
 	outline: none;
 	/* Inset shadow */
