--- a/css/script.css
+++ b/css/script.css
@@ -2,6 +2,7 @@
     background-image: url("../images/durhamskyline2.jpg");
     width:100%;
     height:100%;
+    display:none;
 }
 
 #welcome-text {
